10-sg/main.tf
module "mysql_sg" {
    source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"  
    project_name = var.project_name
    environment = var.environment
    sg_name = "mysql"
    vpc_id = local.vpc_id 
    common_tags = var.common_tags
    sg_tags = var.mysql_sg_tags 

} 

module "bastion_sg" {
    source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
    project_name = var.project_name
    environment = var.environment
    sg_name = "bastion"  
    vpc_id = local.vpc_id 
    common_tags = var.common_tags
    sg_tags = var.bastion_sg_tags   
} 

module "node_sg" {
    source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
    project_name = var.project_name
    environment = var.environment
    sg_name = "node"  
    vpc_id = local.vpc_id 
    common_tags = var.common_tags
    sg_tags = var.node_sg_tags   
} 

module "eks_control_plane_sg" { 
    source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
    project_name = var.project_name
    environment = var.environment
    sg_name = "eks-control-plane"  
    vpc_id = local.vpc_id 
    common_tags = var.common_tags
    sg_tags = var.eks_control_plane_sg_tags   
}  

module "ingress_alb_sg" { 
    source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
    project_name = var.project_name
    environment = var.environment
    sg_name = "ingress-alb"  
    vpc_id = local.vpc_id 
    common_tags = var.common_tags
    sg_tags = var.ingress_alb_sg_tags 
}  


 
# module "app_alb_sg" {
#     source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
#     project_name = var.project_name
#     environment = var.environment
#     sg_name = "app-alb"   
#     vpc_id = local.vpc_id 
#     common_tags = var.common_tags
#     sg_tags = var.app_alb_sg_tags   
# } 

# module "vpn_sg" {
#     source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
#     project_name = var.project_name
#     environment = var.environment
#     sg_name = "vpn"   
#     vpc_id = local.vpc_id 
#     common_tags = var.common_tags  
# } 

# module "web_alb_sg" { 
#     source = "git::https://github.com/santhan29/terraform-aws-security-group.git?ref=main"
#     project_name = var.project_name
#     environment = var.environment
#     sg_name = "web-alb"   
#     vpc_id = local.vpc_id 
#     common_tags = var.common_tags  
#     sg_tags = var.web_alb_sg_tags 
# } 

resource "aws_security_group_rule" "mysql_bastion" {   #mysql accepting connections from bastion
  type              = "ingress"
  from_port         = 3306 
  to_port           = 3306 
  protocol          = "tcp"
  source_security_group_id = module.bastion_sg.id
  security_group_id = module.mysql_sg.id 
} 

resource "aws_security_group_rule" "bastion_public" {  
  type              = "ingress"
  from_port         = 22 
  to_port           = 22 
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.bastion_sg.id   
}

resource "aws_security_group_rule" "ingress_alb_https" {  
  type              = "ingress"
  from_port         = 443 
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.ingress_alb_sg.id   
}

resource "aws_security_group_rule" "node_ingress_alb" {  
  type              = "ingress" 
  from_port         = 30000
  to_port           = 32767
  protocol          = "tcp"
  source_security_group_id = module.ingress_alb_sg.id 
  security_group_id = module.node_sg.id   
}

resource "aws_security_group_rule" "eks_control_plane_node" {  
  type              = "ingress" 
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  source_security_group_id = module.node_sg.id 
  security_group_id = module.eks_control_plane_sg.id   
} 

resource "aws_security_group_rule" "node_eks_control_plane" {  
  type              = "ingress" 
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  source_security_group_id = module.eks_control_plane_sg.id 
  security_group_id = module.node_sg.id   
} 

resource "aws_security_group_rule" "node_vpc" {  
  type              = "ingress" 
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["10.0.0.0/16"] 
  security_group_id = module.node_sg.id   
} 

resource "aws_security_group_rule" "node_bastion" {  
  type              = "ingress" 
  from_port         = 22
  to_port           = 22
  protocol          = "tcp" 
  source_security_group_id = module.bastion_sg.id 
  security_group_id = module.node_sg.id   
} 

resource "aws_security_group_rule" "eks_control_plane_bastion" {  
  type              = "ingress" 
  from_port         = 443
  to_port           = 443
  protocol          = "tcp" 
  source_security_group_id = module.bastion_sg.id 
  security_group_id = module.eks_control_plane_sg.id   
} 


# resource "aws_security_group_rule" "backend_app_alb" {  
#   type              = "ingress"
#   from_port         = 8080
#   to_port           = 8080
#   protocol          = "tcp"
#   source_security_group_id = module.app_alb_sg.id 
#   security_group_id = module.backend_sg.id   
# }

# resource "aws_security_group_rule" "app_alb_bastion" {  
#   type              = "ingress"
#   from_port         = 80
#   to_port           = 80
#   protocol          = "tcp"
#   source_security_group_id = module.bastion_sg.id 
#   security_group_id = module.app_alb_sg.id    
# }

# resource "aws_security_group_rule" "vpn_public" {  
#   type              = "ingress"
#   from_port         = 22
#   to_port           = 22
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"] 
#   security_group_id = module.vpn_sg.id     
# }

# resource "aws_security_group_rule" "vpn_public_443" {  
#   type              = "ingress"
#   from_port         = 443
#   to_port           = 443 
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"] 
#   security_group_id = module.vpn_sg.id    
# }

# resource "aws_security_group_rule" "vpn_public_943" {  
#   type              = "ingress"
#   from_port         = 943
#   to_port           = 943 
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"] 
#   security_group_id = module.vpn_sg.id    
# }

# resource "aws_security_group_rule" "vpn_public_1194" {  
#   type              = "ingress"
#   from_port         = 1194
#   to_port           = 1194 
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"] 
#   security_group_id = module.vpn_sg.id    
# }

# resource "aws_security_group_rule" "app_alb_vpn" {  
#   type              = "ingress"
#   from_port         = 80
#   to_port           = 80
#   protocol          = "tcp"
#   source_security_group_id = module.vpn_sg.id 
#   security_group_id = module.app_alb_sg.id    
# }

# resource "aws_security_group_rule" "backend_vpn" {  
#   type              = "ingress"
#   from_port         = 22
#   to_port           = 22 
#   protocol          = "tcp"
#   source_security_group_id = module.vpn_sg.id 
#   security_group_id = module.backend_sg.id    
# }

# resource "aws_security_group_rule" "backend_vpn_8080" {  
#   type              = "ingress"
#   from_port         = 8080
#   to_port           = 8080  
#   protocol          = "tcp"
#   source_security_group_id = module.vpn_sg.id 
#   security_group_id = module.backend_sg.id    
# }

# resource "aws_security_group_rule" "web_alb_http" {   
#   type              = "ingress"
#   from_port         = 80
#   to_port           = 80
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"]  
#   security_group_id = module.web_alb_sg.id    
# } 

# resource "aws_security_group_rule" "web_alb_https" {   
#   type              = "ingress"
#   from_port         = 443
#   to_port           = 443
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"]  
#   security_group_id = module.web_alb_sg.id    
# } 

# resource "aws_security_group_rule" "frontend_vpn" {    
#   type              = "ingress"
#   from_port         = 22
#   to_port           = 22
#   protocol          = "tcp"
#   source_security_group_id = module.vpn_sg.id 
#   security_group_id = module.frontend_sg.id    
# } 

# resource "aws_security_group_rule" "frontend_web_alb" {     
#   type              = "ingress"
#   from_port         = 80
#   to_port           = 80
#   protocol          = "tcp"
#   source_security_group_id = module.web_alb_sg.id 
#   security_group_id = module.frontend_sg.id    
# } 

# resource "aws_security_group_rule" "app_alb_frontend" {    
#   type              = "ingress"
#   from_port         = 80
#   to_port           = 80
#   protocol          = "tcp"
#   source_security_group_id = module.frontend_sg.id 
#   security_group_id = module.app_alb_sg.id     
# }
